# cxch.app

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Rue.toml  SPEC.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
app/: .env.example  .eslintrc.json  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
app/app/: globals.css  layout.tsx  page.tsx
app/app/components/: AssetId.tsx  Balances.tsx  ConnectButton.tsx  DecimalsBanner.tsx  Landing.tsx  MeltPanel.tsx  Modal.tsx  PoweredByChia.tsx  ProtocolTab.tsx  RiskWarningModal.tsx  SageBadge.tsx  SpendConfirm.tsx  Spinner.tsx  WrapPanel.tsx
app/app/lib/: coin-selection.test.ts  coinset.ts  fees.test.ts  fees.ts  flow.ts  format.test.ts  format.ts  sage.ts  walletconnect.tsx  wasm.ts
app/public/: manifest.webmanifest
app/scripts/: generate-og.mjs
app/wasm-pkg/: wxch_core.d.ts  wxch_core.js  wxch_core_bg.wasm  wxch_core_bg.wasm.d.ts
cmojo-core/: Cargo.toml
cmojo-core/examples/: identity.rs
cmojo-core/src/: constants.rs  dto.rs  error.rs  lib.rs  melt.rs  spend.rs  tail.rs  wrap.rs
cmojo-core/tests/: no_drain.rs  round_trip.rs
cxch-core/: Cargo.toml
cxch-core/examples/: identity.rs
cxch-core/src/: constants.rs  dto.rs  error.rs  lib.rs  melt.rs  spend.rs  tail.rs  wrap.rs
cxch-core/tests/: no_drain.rs  round_trip.rs
docs/: SECURITY.md
wxch-core/: Cargo.toml
wxch-core/examples/: identity.rs
wxch-core/src/: constants.rs  dto.rs  error.rs  lib.rs  melt.rs  spend.rs  tail.rs  wrap.rs
wxch-core/tests/: round_trip.rs
